Brief: product perspective Added: - What product perspective should be TODO - Write Product Perspective

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -176,6 +176,12 @@
 \newpage
 \section{Overall Description}
     \subsection{Product Perspective}
+    
+    TODO:
+    Describe the product's context and origin. Is it the next member of a growing product family, the next version of a mature system, a replacement for an existing application, or an entirely new product? If this Software Requirements Specification (SRS) defines a component of a larger system, state how this software relates to the overall system and identify major interfaces between the two.  
+    
+    
+    %%%%%%%%%%%% pretty sure this is the wrong place for this %%%%%%%%%%%%%%
     This section is intended to provide a full description of the proposed system by meaning of \textit{Domains} and \textit{Phenomena} \cite{zave1997four}.
     
     The \textit{Machine Domain} is the set of phenomena that the machine can control: data structures, algorithms, devices and inputs it can get from the world.
@@ -203,6 +209,8 @@
      & & & \\ \hline
     \end{tabular}
     \end{table}
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     
     \subsubsection{Class Diagram}
     
