Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -209,15 +209,21 @@
     \subsubsection{State Charts}
     
     \subsection{Product Functions}
-    
+     
         \subsubsection{Data4Help}
-        
+       
         \subsubsection{Automated-SOS}
         
         \subsubsection{Track4Run}
-        
+        \newpage
         \subsubsection{Use Cases Diagram}
+       \begin{figure}[htbp]
+    \centering
+    \includegraphics[scale=0.44]
+    {images/UML/Model.jpg}
+    \end{figure}
     
+    \newpage    
     \subsection{User Characteristics}
     
         \subsubsection{Data4Help}
