Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -177,6 +177,11 @@
 \section{Overall Description}
     \subsection{Product Perspective}
     
+     \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[scale=0.44]{images/UML/Model.jpg}
+    \end{figure}
+    \newpage
     TODO:
     Describe the product's context and origin. Is it the next member of a growing product family, the next version of a mature system, a replacement for an existing application, or an entirely new product? If this Software Requirements Specification (SRS) defines a component of a larger system, state how this software relates to the overall system and identify major interfaces between the two.  
     
@@ -286,7 +291,7 @@
         \subsubsection{Registration}
         \textit{TrackMe} must provide a registration interface for both \textit{individual} and \textit{third-party} users.
         
-        An \textit{individual} must provide his/her SSN (Social Security Number) or FC (Fiscal Code) during the registration phase in order to be uniquely identified by \textit{TrackMe} application. In this way, the user is also accepting terms of service and allows \textit{TrackMe} to acquire his/her personal data.
+        A  \textit{individual} must provide his/her SSN (Social Security Number) or FC (Fiscal Code) during the registration phase in order to be uniquely identified by \textit{TrackMe} application. In this way, the user is also accepting terms of service and allows \textit{TrackMe} to acquire his/her personal data.
         %use cases table structure
         \begin{usecase}{Individual User Registration}
         \name{Individual User Registration}
