Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -179,7 +179,7 @@
     
      \begin{figure}[!htpb]
     	\centering
-    	\includegraphics[scale=0.44]{images/UML/Model.jpg}
+    	\includegraphics[width=\textwidth,height=160mm]{images/UML/Model.jpg}
     \end{figure}
     \newpage
     TODO:
