Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -177,12 +177,7 @@
 \section{Overall Description}
     \subsection{Product Perspective}
     
-     \begin{figure}[!htpb]
-    	\centering
-    	\includegraphics[width=\textwidth,height=160mm]{images/UML/Model.jpg}
-    \end{figure}
-    \newpage
-    TODO:
+         TODO:
     Describe the product's context and origin. Is it the next member of a growing product family, the next version of a mature system, a replacement for an existing application, or an entirely new product? If this Software Requirements Specification (SRS) defines a component of a larger system, state how this software relates to the overall system and identify major interfaces between the two.  
     
     
@@ -285,9 +280,14 @@
         \subsubsection{Software Interfaces}
         
         \subsubsection{Communication Interfaces}
-    
+    \newpage
     \subsection{Functional Requirements}
-        
+        \subsubsection{Use Cases Diagram}
+        \begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[width=\textwidth,height=160mm]{images/UML/Model.jpg}
+        \end{figure}
+        \newpage
         \subsubsection{Registration}
         \textit{TrackMe} must provide a registration interface for both \textit{individual} and \textit{third-party} users.
         
