--- a/RASD/requirements.sty
+++ b/RASD/requirements.sty
@@ -39,8 +39,8 @@
     \item #1\checknextarg
 }
 \newcommand{\except}[1]{%
-     \textbf{except} & 
-    \begin{enumerate}
+     \textbf{Exception} & 
+    \begin{itemize}
     \item #1\checknextarg
 }
 \newcommand{\checknextarg}{
