Brief: solved complier errors, moved domains and phenomena section
Added:
- Command "\comment" for inline comments
- World, Machine and Phenomena section (moved from chapter 2 to chapter 1)
* Solved compiler errors due to \except in UC tables ( \begin{itemize} was closed with \end{enumerate} )

TO DO: listed in the document with \comment :)

--- a/RASD/requirements.sty
+++ b/RASD/requirements.sty
@@ -41,7 +41,13 @@
 \newcommand{\except}[1]{%
      \textbf{Exception} & 
     \begin{itemize}
-    \item #1\checknextarg
+    \item #1\checknextexception
+}
+\newcommand{\checknextexception}{
+	\@ifnextchar\bgroup{\gobblenextexception}{\end{itemize} \tabularnewline \hline}
+}
+\newcommand{\gobblenextexception}[1]{
+	\item #1\@ifnextchar\bgroup{\gobblenextarg}{\end{itemize} \tabularnewline \hline}
 }
 \newcommand{\checknextarg}{
 	\@ifnextchar\bgroup{\gobblenextarg}{\end{enumerate} \tabularnewline \hline}
