--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -17,6 +17,8 @@
 \definecolor{frenchplum}{RGB}{129,20,83}
 
 \addbibresource{references.bib}
+%commenti inline
+\newcommand{\comment}[1]{\textbf{[Comment: #1]}}
 
 \begin{document}
 \setlist[enumerate]{label=\alph*),leftmargin=0.4cm, topsep=0cm}
@@ -56,10 +58,40 @@
         
         The system should provide an efficient data acquisition facility which gives the possibility to verified \textit{third-party} signed onto the service to request health status information about subscribed customers. The application may also allow \textit{individual} users to connect \textit{external devices} such as smart-watches or similar, to perform a more detailed data acquisition and monitoring.
         
-        In addition, the \textit{third-party} may also provide a personalized and non intrusive SOS service for elderly people that may also request for it.
+        In addition, the \textit{third-party} may also provide a personalized and non intrusive SOS service for elderly people who requested it.
     
         Moreover, through the \textit{Track4Run} service, \textit{TrackMe} wants to provide to third-parties signed in the application to create a new run, a competition in which other users can either participate as \textit{athletes} or watch as \textit{spectators}. Additionally, this feature may exploits other service functionality for keeping track of athletes progresses and for helping them to prevent major accident happen during the run.
-                
+        
+        \subsubsection{World, Machine and Phenomena}
+        
+        This section is intended to provide a full description of the proposed system by meaning of \textit{Domains} and \textit{Phenomena} \cite{zave1997four}.
+    
+        The \textit{Machine Domain} is the set of phenomena that the machine can control: data structures, algorithms, devices and inputs it can get from the world.
+        
+        In contrast, the \textit{World Domain} is the real-life context in which the \textit{Machine} will be introduced. This is the part of the real-world in which the Machine’s actions will be observed.
+        
+        The World and the Machine are connected too, because the latter should interact with the first one: this interaction is done through \textit{Shared Domain}, whose phenomena are observable both by the Machine and by the World. Shared Phenomena include events in the real world that the Machine can directly sense and actions in the real world that the Machine can directly cause.
+        \begin{table}[!ht]
+        \centering
+        \begin{tabular}{|l|l|l|l|}
+        \hline
+         \textbf{Phenomenon} & \textbf{World} & \textbf{Machine} & \textbf{Shared}\\ \hline
+         Registration/Login/Manage Profile & & & X \\ \hline
+         Application logic & & X & \\ \hline
+         Accept/Refuse/Send Request & & & X \\ \hline
+         Database Query & & X & \\ \hline
+         Connect External Device & & & X \\ \hline
+         GPS Tracking & & X & \\ \hline
+         Enable Sos & & & X \\ \hline
+         Locate nearest Ambulance & & & X \\ \hline
+         Accident & X & & \\ \hline
+         Create/Delete/Enroll/Watch/Start Run & & & X \\ \hline
+         & & & \\ \hline
+         NOT FINISHED YET & X & X & X \\ \hline
+         & & & \\ \hline
+        \end{tabular}
+        \end{table}
+        
         \subsubsection{Description of the proposed system}
         The proposed solution consists of a back-end server application that manages users' registration, login and data and allows to keep everything synchronized between the two front-end applications:
         \begin{itemize}
@@ -69,9 +101,9 @@
         
         The application will provide both \textit{"Sign-on"} and \textit{"Sign-in"} pages and will be able to register new users and to check credentials used to login.
         
-        To register himself an user must provide an username and a password as well as his/her personal information. To be logged in, the user should send through the login form his credentials which the system will use to authenticate him/her.
+        To register himself an user must provide an username and a password as well as his/her personal information. To be logged in, the user should send through the login form his credentials which the system will use to authenticate him.
         
-        \textit{TrackMe} may further yield an interface that allows individual users to connect external devices and a method for acquiring data from it.
+        \textit{TrackMe} may further yield an interface that allows individual users to connect external devices and if so, of course a method for acquiring data from it.
         
         The application should also provide to third-parties two possible data request options:
         \begin{itemize}
@@ -87,21 +119,22 @@
         
         \begin{description}
             \item[G.01] Let the user register on the system
-            \item[G.02] Let the user login/logout from the application
-            \item[G.03] Let the individual user connect an external device
-            \item[G.04] Let the third-party make requests to a specific individual
+            \item[G.02] Allow the user login/logout from the application
+            \item[G.03] Permit the individual user connect an external device
+            \item[G.04] Allow the third-party make requests to a specific individual
             \item[G.05] Let the third-party make requests to groups of individuals
-            \item[G.06] Let the third-party subscribe to individuals' data
-            \item[G.07] Let the user manage his profile
-            \item[G.08] Let the individual accept/refuse third-party requests
-            \item[G.09] Let the third-party enable automated-Sos service
+            \item[G.06] Allow the third-party subscribe to individuals' data
+            \item[G.07] Permit the user manage his profile
+            \item[G.08] Permit the individual accept/refuse third-party requests
+            \item[G.09] Allow the third-party enable automated-Sos service
             \item[G.10] Let the individual enable automated-Sos choosing among third-party that has enabled the service
-            \item[G.10] Let the organizer create a new run
-            \item[G.11] Let the organizer delete a run
-            \item[G.12] Let the organizer start a new run
-            \item[G.13] Let the athlete enroll to a run
-            \item[G.14] Let the athlete unroll to a run
-            \item[G.15] Let the spectator watch a run
+            \item[G.10] Authorize third-party users to get individuals' data if evaluated as anonymous
+            \item[G.11] Allow the organizer create a new run
+            \item[G.12] Let the organizer delete a run
+            \item[G.13] Let the organizer start a new run
+            \item[G.14] Permit the athlete enroll to a run
+            \item[G.15] Allow the athlete unroll to a run
+            \item[G.16] Let the spectator watch a run
         \end{description}
     
     \subsection{Document Overview}
@@ -121,10 +154,12 @@
             \subsubsection{Definition of Terms}
             This document uses several terms that might be more loosely used elsewhere. These terms are defined here as they will be used later on in this document.
                 \begin{description}
-                    \item[\textbf{User}] a general definition of a customer registered into the application
+                    \item[\textbf{Guest}] an external customer of the system that wants to register or login into the application
                     
-                    \item[\textbf{Individual}] a single person \textit{User}, identified either by SSN or by FC number
-                    \item[\textbf{Third-Party}] an organization \textit{User}, identified by VAT number
+                    \item[\textbf{User}] a \textit{Guest} customer registered/logged into the application
+                    
+                    \item[\textbf{Individual}] a single person, registered or logged into the application identified either by SSN or by FC number
+                    \item[\textbf{Third-Party}] an organization registered or logged in \textit{TrackMe}, identified by VAT number
                     
                     \item[\textbf{Subscribed User}] an individual for which one or more third party have done a request accepted by the individual itself
                     
@@ -151,10 +186,10 @@
                 
             \subsubsection{Abbreviations}
             \begin{itemize}
-                \item $[$An$]$: Assumption number n
-                \item $[$Cn$]$: Constraint number n
-                \item $[$Dn$]$: Dependency number n
-                \item $[$Gn$]$: Goal number n
+                \item $[$A.n$]$: Assumption number n
+                \item $[$C.n$]$: Constraint number n
+                \item $[$D.n$]$: Dependency number n
+                \item $[$G.n$]$: Goal number n
             \end{itemize}
             
             \subsubsection{Acronyms}
@@ -177,42 +212,10 @@
 \section{Overall Description}
     \subsection{Product Perspective}
     
-         TODO:
-    Describe the product's context and origin. Is it the next member of a growing product family, the next version of a mature system, a replacement for an existing application, or an entirely new product? If this Software Requirements Specification (SRS) defines a component of a larger system, state how this software relates to the overall system and identify major interfaces between the two.  
-    
-    
-    %%%%%%%%%%%% pretty sure this is the wrong place for this %%%%%%%%%%%%%%
-    This section is intended to provide a full description of the proposed system by meaning of \textit{Domains} and \textit{Phenomena} \cite{zave1997four}.
-    
-    The \textit{Machine Domain} is the set of phenomena that the machine can control: data structures, algorithms, devices and inputs it can get from the world.
-    
-    In contrast, the \textit{World Domain} is the real-life context in which the \textit{Machine} will be introduced. This is the part of the real-world in which the Machine’s actions will be observed.
-    
-    The World and the Machine are connected too, because the latter should interact with the first one: this interaction is done through \textit{Shared Domain}, whose phenomena are observable both by the Machine and by the World. Shared Phenomena include events in the real world that the Machine can directly sense and actions in the real world that the Machine can directly cause.
-    \begin{table}[!ht]
-    \centering
-    \begin{tabular}{|l|l|l|l|}
-    \hline
-     \textbf{Phenomenon} & \textbf{World} & \textbf{Machine} & \textbf{Shared}\\ \hline
-     Registration/Login/Manage Profile & & & X \\ \hline
-     Application logic & & X & \\ \hline
-     Accept/Refuse/Send Request & & & X \\ \hline
-     Database Query & & X & \\ \hline
-     Connect External Device & & & X \\ \hline
-     GPS Tracking & & X & \\ \hline
-     Enable Sos & & & X \\ \hline
-     Locate nearest Ambulance & & & X \\ \hline
-     Accident & X & & \\ \hline
-     Create/Delete/Enroll/Watch/Start Run & & & X \\ \hline
-     & & & \\ \hline
-     NOT FINISHED YET & X & X & X \\ \hline
-     & & & \\ \hline
-    \end{tabular}
-    \end{table}
-    
-    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \comment{Describe the product's context and origin. Is it the next member of a growing product family, the next version of a mature system, a replacement for an existing application, or an entirely new product? If this Software Requirements Specification (SRS) defines a component of a larger system, state how this software relates to the overall system and identify major interfaces between the two.}
     
     \subsubsection{Class Diagram}
+    \comment{See enhancement \#3 on Git Hub}
     
     \subsubsection{State Charts}
     
@@ -229,7 +232,10 @@
     \textit{Track4Run} is also built on top of \textit{Data4Help} and allows third parties to create new runs where athletes can participate. Athletes' position can be tracked and it will be sent to all spectators that are watching the run.
     
     \subsection{User Characteristics}
-    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  here we include anything that is relevant to clarify their needs     %%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \comment{I think these are "definition" (also better than the ones I've actually written)}
+    %maybe move to definition section
         \subsubsection{Data4Help}
         \begin{itemize}
             \item \textbf{Guest:} a person that is visiting \textit{TrackMe}. He can only login or register to the system.
