Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -257,15 +257,19 @@
         
     \subsection{Assumptions, Dependencies and Constraints}
         \begin{description}
-            \item[A.01] Assumption
+            \item[A.01] Individual data acquisition consists in ...................
+            \item[A.02] In order to access the system a Guest must provide a valid username and its associated password.
+            \item[A.03]
+            \item[A.02] At least one ambulance is always available.
+            \item[A.03]
         \end{description}
         
         \begin{description}
-            \item[D.01] Dependencies
+            \item[D.01] An Athlete can enroll a run only if 
         \end{description}
         
         \begin{description}
-            \item[C.01] Constraints
+            \item[C.01] If an individual's health parameters are below ....... an ambulance must be called in less than 5 seconds.
         \end{description}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
